make svg scale and position input work; fix dragging resize bug; wireframe on; out of canvas visible;

--- a/public/sass/pages/_beambox.scss
+++ b/public/sass/pages/_beambox.scss
@@ -1,4 +1,7 @@
 .beambox-studio {
+    svg:not(:root) {
+        overflow: visible;
+    }
     user-select: none;
     padding: 5px;
     .left-panel {
